# u-index-rs

./: .gitignore  Cargo.toml  eval.py  justfile  mismatches.py  readme.org  stats-english.json  stats-proteins.json  stats.json
.cargo/: config.toml
evals/: chm13v2.0.fa  eval.py  grch38.p14.fa  justfile  mismatches.py  random-long-reads.fastq  stats-english.json  stats-proteins.json
examples/: bench.rs  long_read_mapping.rs
py/: eval.ipynb  human-genome.fa  uindex
src/: bench.rs  indices.rs  lib.rs  py.rs  s_index.rs  sketchers.rs  test.rs  traits.rs  u_index.rs  utils.rs
src/indices/: fm_awry.rs  fm_bio.rs  fm_sdsl.rs  sa_divsufsort.rs  sa_libsais.rs  suffix_array.rs
src/sketchers/: identity.rs  minimizers.rs
