[package]
name = "uindex"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = "thin"
incremental = true

[dependencies]
cacheline-ef = "1.1"
itertools = "0.14.0"
mem_dbg = "0.3.0"
simd-minimizers = "1.1"
packed-seq = "2.0"
num-traits = "0.2.19"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Big / datastructure dependencies
sux = "0.7.4"
sdsl-lite-fm = { version = "0.1.0", path = "../sdsl-lite-fm", optional = true }
libdivsufsort-rs = { version = "0.1.4", optional = true }
libsais-rs = { version = "0.1.0", git = "https://github.com/ragnargrootkoerkamp/libsais-rs"}

bio = { version = "2.0.3", optional = true }
awry = { version = "0.3", optional = true }

# Also used via python interface.
rand = "0.9.0"
needletail = "0.6.1"
color-backtrace = "0.7.0"
serde_json = "1.0.135"
libc = "0.2.169"

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }

[features]
# Not enabled by default, since MacOS doesn't have OpenMP.
openmp = ['libsais-rs/openmp']

