[package]
name = "uindex"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = "thin"
incremental = true

[dependencies]
cacheline-ef = "1.1"
color-backtrace = "0.7.0"
itertools = "0.14.0"
libc = "0.2.169"
mem_dbg = "0.3.0"
needletail = "0.6.1"
num-traits = "0.2.19"
packed-seq = "2.0"
rand = "0.9.0"
serde_json = "1.0.135"
simd-minimizers = "1.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Datastructure dependencies for the basic suffix-array + Elias-Fano version.
sux = "0.7.4"
libsais-rs = { version = "0.1.0", git = "https://github.com/ragnargrootkoerkamp/libsais-rs"}

# Optional additional datastructures.
sdsl-lite-fm = { version = "0.1.0", path = "../sdsl-lite-fm", optional = true }
libdivsufsort-rs = { version = "0.1.4", optional = true }
bio = { version = "2.0.3", optional = true }
awry = { version = "0.3", optional = true }

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }

[features]
# Not enabled by default, since MacOS doesn't have OpenMP.
openmp = ['libsais-rs/openmp']

